--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.2.3",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "sass": "^1.58.3",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/lodash.debounce": "^4.0.7"
   }
 }
